# desktop-frameworks-benchmarking

./: .gitignore  README.md  desktop_framework_benchmark_agent_guide.md  package-lock.json  package.json  tsconfig.base.json
apps/electrobun/: README.md  electrobun.config.ts  package.json  tsconfig.json
apps/electrobun/src/bun/: index.ts
apps/electrobun/src/mainview/: index.css  index.html  index.tsx
apps/electrobun/src/shared/: rpc.ts  secondary-window.html.ts
apps/electron/: README.md  electron-builder.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/electron/electron/: main.ts  preload.ts
apps/electron/src/renderer/: globals.d.ts  main.tsx
apps/tauri/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/public/: secondary.html
apps/tauri/src/: main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/resources/dataset/: mock-api-response.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
docs/: benchmark-runner.md  dataset-schema.md  diary.md  environment-lock.md  hardware.md  repo-layout.md
scripts/: electron-dev.mjs  generate-benchmark-dataset.mjs  prepare-electrobun-assets.mjs  prepare-electron-assets.mjs  prepare-tauri-assets.mjs  report-benchmark-results.mjs  run-benchmark.mjs
